; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_parse_count_body.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_parse_count_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@currently_parsing_eof = common dso_local global i32 0, align 4
@parser = common dso_local global i32 0, align 4
@settings_count_body = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @parse_count_body(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp eq i64 %6, 0
  %8 = zext i1 %7 to i32
  store i32 %8, i32* @currently_parsing_eof, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = call i64 @http_parser_execute(i32* @parser, i32* @settings_count_body, i8* %9, i64 %10)
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  ret i64 %12
}

declare dso_local i64 @http_parser_execute(i32*, i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
